--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,8 +12,8 @@ dock_floating={}
 dock_split_2=288
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=258
+dock_hsplit_3=-339
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
-current_scene="res://Game.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn")
+current_scene="res://world.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Game.gd", "res://world.gd"]
-selected_script="res://Game.gd"
+selected_script="res://world.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
