--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=288
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=258
+dock_hsplit_2=487
 dock_hsplit_3=-339
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_particle-pack/PNG (Transparent)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn")
-current_scene="res://world.tscn"
+current_scene="res://Game.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Game.gd", "res://world.gd"]
-selected_script="res://world.gd"
+selected_script="res://Game.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
