--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -12,19 +12,15 @@ dock_floating={}
 dock_split_2=288
 dock_split_3=0
 dock_hsplit_1=0
-<<<<<<< HEAD
-dock_hsplit_2=453
-dock_hsplit_3=-432
-=======
-dock_hsplit_2=487
+<<<<<<<HEADdock_hsplit_2=453
 dock_hsplit_3=-339
->>>>>>> a40dfb623fad02b7016e222dfd0950b1170c5bfd
+dock_hsplit_2=487
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Game.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://pause_menu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_particle-pack/PNG (Transparent)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,27 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<< HEAD
 open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
 current_scene="res://pause_menu.tscn"
-=======
-open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn")
-current_scene="res://Game.tscn"
->>>>>>> a40dfb623fad02b7016e222dfd0950b1170c5bfd
 center_split_offset=-252
+selected_bottom_panel_item=1
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-<<<<<<< HEAD
 open_scripts=["res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
 selected_script="res://pause_menu.gd"
-=======
-open_scripts=["res://Game.gd", "res://world.gd"]
-selected_script="res://Game.gd"
->>>>>>> a40dfb623fad02b7016e222dfd0950b1170c5bfd
 open_help=[]
 script_split_offset=140
 list_split_offset=0
@@ -62,13 +48,3 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=true
-log_filter_3=true
-log_filter_4=true
-collapse=false
-show_search=true
