--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,38 +13,38 @@ dock_split_2=288
 dock_split_3=0
 dock_hsplit_1=0
 <<<<<<<HEADdock_hsplit_2=453
-dock_hsplit_3=-339
-dock_hsplit_2=487
+dock_hsplit_3=-432
+dock_hsplit_2=453
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://pause_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_particle-pack/PNG (Transparent)/")
+dock_filesystem_selected_paths=PackedStringArray("res://pistolammo.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
-current_scene="res://pause_menu.tscn"
+open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://ammo_count.tscn")
+current_scene="res://ammo_count.tscn"
 center_split_offset=-252
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
-selected_script="res://pause_menu.gd"
+open_scripts=["res://counter.gd", "res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
+selected_script="res://Game.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://pauseblur.gdshader", "res://pause_menu.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://pauseblur.gdshader"
