--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
-current_scene="res://pause_menu.tscn"
+current_scene="res://Game.tscn"
 center_split_offset=-252
 selected_bottom_panel_item=1
 selected_default_debugger_tab_idx=0
@@ -38,7 +38,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
-selected_script="res://pause_menu.gd"
+selected_script="res://Game.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
