--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://pause_menu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Game.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_particle-pack/PNG (Transparent)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
-current_scene="res://Game.tscn"
+open_scenes=PackedStringArray("res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://Game.tscn")
+current_scene="res://world.tscn"
 center_split_offset=-252
-selected_bottom_panel_item=1
+selected_bottom_panel_item=13
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
-selected_script="res://Game.gd"
+selected_script="res://world.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
