--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,9 +29,9 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://Game.tscn")
-current_scene="res://world.tscn"
+current_scene="res://map.tscn"
 center_split_offset=-252
-selected_bottom_panel_item=13
+selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
