--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,13 +28,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<< HEAD
-open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://ammo_count.tscn")
-current_scene="res://ammo_count.tscn"
-=======
+<<<<<<<HEADopen_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://ammo_count.tscn")
+current_scene="res://pause_menu.tscn"
 open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
-current_scene="res://Game.tscn"
->>>>>>> f37ef85f31925febb4c257adfff6b6bf25ad6d7c
 center_split_offset=-252
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -42,12 +38,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-<<<<<<< HEAD
 open_scripts=["res://counter.gd", "res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
-=======
-open_scripts=["res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
->>>>>>> f37ef85f31925febb4c257adfff6b6bf25ad6d7c
-selected_script="res://Game.gd"
+selected_script="res://pause_menu.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
