--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=288
+dock_split_2=103
 dock_split_3=0
 dock_hsplit_1=0
 <<<<<<<HEADdock_hsplit_2=453
@@ -20,8 +20,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Game.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_particle-pack/PNG (Transparent)/")
+dock_filesystem_selected_paths=PackedStringArray("res://kenney_particle-pack/PNG (Transparent)/star_02.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_particle-pack/", "res://kenney_particle-pack/PNG (Transparent)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://Game.tscn")
 current_scene="res://world.tscn"
 center_split_offset=-252
-selected_bottom_panel_item=1
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_bottom_panel_item=4
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
