--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=103
 dock_split_3=0
 dock_hsplit_1=0
 <<<<<<<HEADdock_hsplit_2=453
-dock_hsplit_3=-339
+dock_hsplit_3=-216
 dock_hsplit_2=487
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -33,7 +33,7 @@ current_scene="res://world.tscn"
 center_split_offset=-252
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
@@ -48,3 +48,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
