--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,17 +29,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://ammo_count.tscn")
-current_scene="res://pause_menu.tscn"
+current_scene="res://map.tscn"
 open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
 center_split_offset=-252
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
 open_scripts=["res://counter.gd", "res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
-selected_script="res://pause_menu.gd"
+selected_script="res://world.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
