--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,14 +13,14 @@ dock_split_2=103
 dock_split_3=0
 dock_hsplit_1=0
 <<<<<<<HEADdock_hsplit_2=453
-dock_hsplit_3=-216
+dock_hsplit_3=-422
 dock_hsplit_2=487
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://low_poly_katana.glb")
+dock_filesystem_selected_paths=PackedStringArray("res://m_6.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://kenney_particle-pack/", "res://kenney_particle-pack/PNG (Transparent)/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -38,10 +38,10 @@ selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
+open_scripts=["res://Camera3D.gd", "res://Crosshair.gd", "res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
 selected_script="res://world.gd"
 open_help=[]
-script_split_offset=140
+script_split_offset=150
 list_split_offset=0
 
 [ShaderEditor]
