--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,8 +20,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://iansmap 1.obj")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://OBJ-20250610T141224Z-1-001/", "res://OBJ-20250610T141224Z-1-001/OBJ/")
+dock_filesystem_selected_paths=PackedStringArray("res://Global.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://OBJ-20250610T141224Z-1-001/OBJ/", "res://kenney_prototype-textures/Vector/", "res://kenney_prototype-textures/PNG/", "res://kenney_prototype-textures/PNG/Red/", "res://kenney_prototype-textures/PNG/Purple/", "res://kenney_prototype-textures/PNG/Orange/", "res://kenney_prototype-textures/PNG/Light/", "res://kenney_prototype-textures/PNG/Green/", "res://kenney_prototype-textures/PNG/Dark/", "res://kenney_particle-pack/PNG (Transparent)/", "res://kenney_particle-pack/PNG (Transparent)/Rotated/", "res://kenney_particle-pack/PNG (Black background)/", "res://kenney_particle-pack/PNG (Black background)/Rotated/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://ammo_count.tscn")
-current_scene="res://map.tscn"
+current_scene="res://world.tscn"
 open_scenes=PackedStringArray("res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://Game.tscn", "res://weapons_menu.tscn", "res://bulletdecal.tscn", "res://bullet_particles.tscn", "res://blood.tscn")
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://bullet_particles.gd", "res://Camera3D.gd", "res://Crosshair.gd", "res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
+open_scripts=["res://bullet_particles.gd", "res://Camera3D.gd", "res://Crosshair.gd", "res://Game.gd", "res://Global.gd", "res://pause_menu.gd", "res://world.gd"]
 selected_script="res://world.gd"
 open_help=[]
 script_split_offset=150
