--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,8 +20,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://pistolammo.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://iansmap.obj")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,8 +29,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://ammo_count.tscn")
-current_scene="res://pause_menu.tscn"
-open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn")
+current_scene="res://WeaponSelect.tscn"
+open_scenes=PackedStringArray("res://Game.tscn", "res://map.tscn", "res://world.tscn", "res://pause_menu.tscn", "res://WeaponSelect.tscn")
 center_split_offset=-252
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -38,8 +38,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://counter.gd", "res://Game.gd", "res://pause_menu.gd", "res://world.gd"]
-selected_script="res://pause_menu.gd"
+open_scripts=["res://Game.gd", "res://Global.gd", "res://pause_menu.gd", "res://WeaponSelect.gd", "res://world.gd"]
+selected_script="res://WeaponSelect.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
