--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/private/var/folders/hj/8wb5z2b56qx8_9395wsmj2qh0000gn/T/AppTranslocation/7BD88618-43B7-4A4C-9F2E-B93A74A840D5/d/Godot.app/Contents/MacOS/Godot"
+executable_path="/Applications/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 
 [debug_options]
